--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ed_join"
-version = "0.1.2"
+version = "1.0.0"
 authors = ["Lucius Hu <lebensterben@users.noreply.github.com>"]
 edition = "2018"
 description = "A Rust Implemtation of Ed-Join Algorithm for string similarity join"
@@ -12,15 +12,24 @@ license = "Apache-2.0 AND MIT"
 [badges]
 travis-ci = { repository = "lebensterben/ed_join" }
 
+[features]
+cli = ["clap", "dialoguer", "env_logger", "indicatif", "log"]
+
+[[bin]]
+name = "ed-join"
+path = "src/bin.rs"
+required-features = ["cli"]
+
 [dependencies]
-clap = "2.33.0"
-dialoguer = "0.4.0"
-rayon = "1.2.0"
-log = "0.4.8"
-env_logger = "0.7.0"
+edit-distance = "2.1.0"
 error-chain = "0.12.1"
 parking_lot = "0.9.0"
-edit-distance = "2.1.0"
+rayon = "1.2.0"
+
+clap = { version = "2.33.0", optional = true }
+dialoguer = { version = "0.4.0", optional = true }
+env_logger = { version = "0.7.0", optional = true }
+log = { version = "0.4.8", optional = true }
 
 [dependencies.indexmap]
 version = "1.2.0"
@@ -29,3 +38,4 @@ features = ["rayon"]
 [dependencies.indicatif]
 version = "0.12.0"
 features = ["with_rayon"]
+optional = true
