--- a/.travis.yml
+++ b/.travis.yml
@@ -17,3 +17,9 @@ env:
 git:
   depth: false
   quiet: true
+after_success:
+  cargo doc --document-private-items \
+  && echo '<meta http-equiv=refresh content=0;url=ed_join/index.html>' > target/doc/index.html && \
+    sudo pip install ghp-import && \
+    ghp-import -n target/doc && \
+    git push -qf https://${TOKEN}@github.com/${TRAVIS_REPO_SLUG}.git gh-pages
