--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Lucius Hu <lebensterben@users.noreply.github.com>"]
 edition = "2018"
 description = "A Rust Implemtation of Ed-Join Algorithm for string similarity join"
 repository = "https://github.com/lebensterben/ed_join"
+documentation = "https://notatall.io/ed_join/ed_join/index.html"
 keywords = ["string", "similarity", "text-processing", "algorithm"]
 categories = ["algorithms", "text-processing"]
 license = "Apache-2.0 AND MIT"
