Changed Travis CI setting to build with `cli` feature

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,8 @@ jobs:
   fast_finish: true
 cache: cargo
 script:
-  - cargo build --verbose --all
-  - cargo test --verbose --all
+  - cargo build --verbose --all --release --features=cli
+  - cargo test --verbose --all --release --features=cli
 env:
   global:
     - RUST_BACKTRACE: full
