--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,9 +27,9 @@ path = "src/bin.rs"
 required-features = ["cli"]
 
 [dependencies]
+crossbeam-channel = "0.3.9"
 edit-distance = "2.1.0"
 error-chain = "0.12.1"
-parking_lot = "0.9.0"
 rayon = "1.2.0"
 
 # optional dependencies
@@ -37,10 +37,6 @@ clap = { version = "2.33.0", optional = true }
 dialoguer = { version = "0.4.0", optional = true }
 env_logger = { version = "0.7.0", optional = true }
 log = { version = "0.4.8", optional = true }
-
-[dependencies.indexmap]
-version = "1.2.0"
-features = ["rayon"]
 
 [dependencies.indicatif]
 version = "0.12.0"
